Two fail cases with modifiers targeting linked assets #26695

Closed
opened 2011-03-30 21:55:58 +02:00 by Vox Lapin · 6 comments

%%%Attached are two blend files:
linked_asset: one object "Cube" and one object "Cubefoo", both in a group "linked_asset_group"
main_file: One relative-linked instance of "linked_asset_group" and one object "Cube" with a Shrinkwrap modifier with no target

  1. In the modifier, when I try to select Cube in the Target dropdown, Blender rejects the selection. I note that the self object is not available in the dropdown, so this must be the linked Cube.

  2. In the modifier, select "Cubefoo" for the target. (Hey, without the same name, it works! Hmm :) Save the file. Re-open the file. The target was not saved.

discovered with dobz r35747 win 64; confirmed with personal trunk win 32 r35906%%%

%%%Attached are two blend files: linked_asset: one object "Cube" and one object "Cubefoo", both in a group "linked_asset_group" main_file: One relative-linked instance of "linked_asset_group" and one object "Cube" with a Shrinkwrap modifier with no target 1) In the modifier, when I try to select Cube in the Target dropdown, Blender rejects the selection. I note that the self object is not available in the dropdown, so this must be the linked Cube. 2) In the modifier, select "Cubefoo" for the target. (Hey, without the same name, it works! Hmm :) Save the file. Re-open the file. The target was not saved. discovered with dobz r35747 win 64; confirmed with personal trunk win 32 r35906%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%3) With the modifier, target Cubefoo. In the viewport, rotate the linked_asset_group. The modifier does not respect Cubefoo's transform. Even if the linked_asset_group is placed under an empty in the scene and the empty is animated to rotate, the Cube stays put.%%%

%%%3) With the modifier, target Cubefoo. In the viewport, rotate the linked_asset_group. The modifier does not respect Cubefoo's transform. Even if the linked_asset_group is placed under an empty in the scene and the empty is animated to rotate, the Cube stays put.%%%

%%%confirmed, investigating,%%%

%%%confirmed, investigating,%%%

%%%fixed issue #2, r35916
looking into #1 now.%%%

%%%fixed issue #2, r35916 looking into #1 now.%%%

%%%#1, is a bug in that it shows an item which cant be used, but doubling up names in library items is generally not well supported, if you do this you will get troubles elsewhere too.

3, moving the dupli instance does not move the original objects in the group which its instancing.

closing.
%%%

%%%#1, is a bug in that it shows an item which cant be used, but doubling up names in library items is generally not well supported, if you do this you will get troubles elsewhere too. # 3, moving the dupli instance does not move the original objects in the group which its instancing. closing. %%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#26695
No description provided.