fix for issue #2 in report: [#26695] Two fail cases with modifiers targeting linked assets also fix for scene.objects.link() not setting library data as being directly used.